deploy/logs/cloud_sync.log
nohup: ignoring input
python: can't open file '/data/data/com.termux/files/home/empress/throne/cloud_sync_trigger.py': [Errno 2] No such file or directory
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/cloud_sync_trigger.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/cloud_sync_trigger.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/cloud_sync_trigger.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/cloud_sync_trigger.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/cloud_sync_trigger.py", line 1
    import time\nwhile True:\n    print("[EMPRESS] Cloud sync trigger executing…")\n    time.sleep(60)
                ^
SyntaxError: unexpected character after line continuation character
